Fix sys.flags to properly expose bytes_warning.

Closes issue #2790.